# hidenseek

./: .gitignore  pyproject.toml
.cursor/rules/: python.mdc
src/hide_n_seek.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/hns/: README.md  __init__.py  cli.py  fs.py  sanitizer.py  sanitizer_menu.py
src/hns/tests/: test_fs.py
